--- a/book.toml
+++ b/book.toml
@@ -13,11 +13,4 @@ additional-css = ["./mdbook-paisano-preprocessor.css"]
 
 [output.linkcheck]
 
-[preprocessor.paisano-preprocessor]
-assets_version = "0"
-command = "mdbook-paisano-preprocessor"
-registry = ".#__std.init"
-
-[[preprocessor.paisano-preprocessor.multi]]
-cell = "tui"
-chapter = "TUI Reference"
+[preprocessor]
