refactor: use new and shiny paisano direnv support

--- a/.envrc
+++ b/.envrc
@@ -1,13 +1,5 @@
 #! /bin/sh
 
-source "$(
-  nix eval \
-  --no-update-lock-file \
-  --no-write-lock-file \
-  --no-warn-dirty \
-  --accept-flake-config \
-  .#__std.direnv_lib 2>/dev/null \
-  || nix eval .#__std.direnv_lib # show the errors
-)"
-use std nix //repo/shells:default
+source "$(fetchurl "https://raw.githubusercontent.com/paisano-nix/direnv/main/lib" "sha256-XKqDMz+VtF8VSJ4yOok4mO1xxXUZbD1t2yC0JmEXrCI=")"
 
+use envreload //repo/shells/default //repo/config
