--- a/cog.toml
+++ b/cog.toml
@@ -9,6 +9,6 @@ post_bump_hooks = [
 path = "CHANGELOG.md"
 template = "remote"
 remote = "github.com"
-repository = "paisano-nix"
-owner = "tui"
+repository = "tui"
+owner = "paisano-nix"
 authors = [{ username = "blaggacao", signature = "David Arnold" }]
