--- a/.envrc
+++ b/.envrc
@@ -1,5 +1,6 @@
 #! /bin/sh
 
-source "$(fetchurl "https://raw.githubusercontent.com/paisano-nix/direnv/main/lib" "sha256-XKqDMz+VtF8VSJ4yOok4mO1xxXUZbD1t2yC0JmEXrCI=")"
+# shellcheck disable=SC1090
+. "$(fetchurl "https://raw.githubusercontent.com/paisano-nix/direnv/main/lib" "sha256-IgQhKK7UHL1AfCUntJO2KCaIDJQotRnK2qC4Daxk+wI=")"
 
 use envreload //repo/shells/default //repo/config
