--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,10 @@
 result
 
 # nixago: ignore-linked-files
+/cog.toml
+/lefthook.yml
+/.conform.yaml
+/treefmt.toml
 adrgen.config.yml
 lefthook.yml
 .editorconfig
